feat: join started/finished events